--- a/recipes/style.css
+++ b/recipes/style.css
@@ -1,10 +1,30 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     line-height: 30px;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     font-size: 20px;
 }
 h1, div{
     text-align: center;
+}
+.ingredients, .steps, .description{
+    width: 900px;
+    background-color: black;
+    color: white;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.ingredients li, .steps li, .description p{
+    text-align: left;
+}
+
+.heading{
+    width: 900px;
+    margin: 0 auto;
+    text-align: left;
+    margin-bottom: 30px;
+    font-size: 40px;
+    margin-top: 30px;
 }
